deployment-strategies/recreate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recreate
  name: recreate-deployment
  namespace: recreate-ns
spec:
  replicas: 5
  selector:
    matchLabels:
      app: recreate
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: recreate
    spec:
      containers:
        - image: abhradippaul/deployment-strategies:v1
          name: recreate-container
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 25m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 20Mi
