deployment-strategies/recreate/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: online-shop
  name: online-shop-svc
  namespace: recreate-ns
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: online-shop
