deployment-strategies/recreate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recreate-deployment-strategies
  namespace: recreate-ns
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recreate-svc
                port:
                  number: 80
